style: run spotlessApply